# kdesdk

./: Makefile  README.md  kdesdk-4.10.5-fix-crash-with-invalid-selection.patch  kdesdk-4.10.5-remove-env-shebang.patch  kdesdk-4.3.4-bz#908709.patch  kdesdk-4.3.4-umbrello-recursion.patch  kdesdk-4.3.4-umbrello-strict-aliasing.patch  kdesdk-kminspector-multilib.patch  kdesdk.spec
src/: CMakeLists.txt  README
src/cervisia/doc/: index.cache.bz2
src/cmake/modules/: FindSVN.cmake  KAppTemplateMacro.cmake  KDECTestNightly.cmake
src/doc/: CMakeLists.txt
src/doc/cervisia/: index.cache.bz2
src/doc/kapptemplate/: index.cache.bz2
src/doc/kate/: advanced.docbook  configuring.docbook  fundamentals.docbook  highlighting.docbook  index.cache.bz2  index.docbook  mdi.docbook  menus.docbook  part.docbook
src/doc/kate-plugins/: index.cache.bz2  index.docbook
src/doc/kbugbuster/: index.cache.bz2  index.docbook
src/doc/kcachegrind/: index.cache.bz2
src/doc/kompare/: index.cache.bz2
src/doc/lokalize/: index.cache.bz2
src/doc/scripts/kdesvn-build/: index.cache.bz2
src/doc/umbrello/: index.cache.bz2
src/kapptemplate/doc/: index.cache.bz2
src/kapptemplate/templates/C++/kapp4/: README
src/kate/app/: katemainwindow.cpp
src/kate/data/: kate.desktop
src/kate/plasma/session/: plasma-applet-katesession.desktop
src/kate/plugins/backtracebrowser/: katebacktracebrowserplugin.desktop
src/kate/plugins/filetemplates/plugin/: katefiletemplates.desktop
src/kate/plugins/findinfiles/: katefindinfiles.cpp  katefindinfilesplugin.desktop
src/kate/plugins/helloworld/: katehelloworld.desktop
src/kate/plugins/htmltools/: katehtmltools.desktop
src/kate/plugins/insertcommand/: kateinsertcommand.desktop
src/kate/plugins/kate-ctags/: katectagsplugin.desktop
src/kate/plugins/katebuild-plugin/: plugin_katebuild.cpp
src/kate/plugins/kjswrapper/samples/: katekjsconsolewindow.desktop  katekjstest1.desktop
src/kate/plugins/konsole/: kateconsole.cpp
src/kate/plugins/kpybrowser/: katepybrowse.desktop
src/kate/plugins/kttsd/: kate_kttsd.desktop
src/kate/plugins/mailfiles/: katemailfilesplugin.desktop
src/kate/plugins/openheader/: kateopenheader.desktop  plugin_kateopenheader.cpp
src/kate/plugins/skeleton/: kateexternaltoolsplugin.desktop
src/kate/plugins/snippets/: katesnippets.desktop
src/kate/plugins/tabbarextension/: katetabbarextension.desktop
src/kate/plugins/xmlcheck/: katexmlcheck.desktop
src/kate/plugins/xmltools/: katexmltools.desktop
src/kbugbuster/: CMakeLists.txt  Mainpage.dox  Messages.sh  kbugbuster.desktop  main.cpp  version.h
src/kbugbuster/backend/: bug.cpp  bug.h  bugcache.cpp  bugcache.h  bugcommand.cpp  bugcommand.h  bugdetails.cpp  bugdetails.h  bugdetailsimpl.h  bugdetailsjob.cpp  bugdetailsjob.h  bugdetailspart.h  bugimpl.h  bugjob.cpp  bugjob.h  buglistjob.cpp  bugmybugsjob.cpp  bugserver.cpp  bugserver.h  bugserverconfig.cpp  bugserverconfig.h  bugsystem.cpp  bugsystem.h  domprocessor.cpp  domprocessor.h  error.h  htmlparser.cpp  htmlparser.h  kbbprefs.cpp  kbbprefs.h  mailsender.cpp  mailsender.h  package.cpp  package.h  packageimpl.h  person.cpp  person.h  processor.cpp  processor.h  rdfprocessor.cpp  (+3 more)
src/kbugbuster/gui/: CMakeLists.txt  buglvi.cpp  buglvi.h  centralwidget.cpp  centralwidget.h  centralwidget_base.ui  cwbugdetails.cpp  cwbugdetails.h  cwbugdetailscontainer.cpp  cwbugdetailscontainer.h  cwbugdetailscontainer_base.ui  cwbuglistcontainer.cpp  cwbuglistcontainer.h  cwloadingwidget.cpp  cwloadingwidget.h  cwsearchwidget.cpp  cwsearchwidget.h  cwsearchwidget_base.ui  kbbbookmarkmanager.h  kbbmainwindow.cpp  kbbmainwindow.h  loadallbugsdlg.cpp  loadallbugsdlg.h  messageeditor.cpp  messageeditor.h  msginputdialog.cpp  msginputdialog.h  packagelvi.cpp  packagelvi.h  packageselectdialog.cpp  packageselectdialog.h  preferencesdialog.cpp  preferencesdialog.h  serverconfigdialog.cpp  serverconfigdialog.h  severityselectdialog.cpp  severityselectdialog.h
src/kbugbuster/kresources/: CMakeLists.txt  Messages.sh  bugzilla.desktop  kcalresource.cpp  kcalresource.h  kcalresource_plugin.cpp  kcalresourceconfig.cpp  kcalresourceconfig.h
src/kbugbuster/pics/: CMakeLists.txt
src/kcachegrind/doc/: index.cache.bz2
src/kdeaccounts-plugin/: kdeaccountsplugin.desktop
src/kompare/doc/: index.cache.bz2
src/kstartperf/: kstartperf.cpp
src/lokalize/doc/: index.cache.bz2
src/lokalize/src/catalog/: gettextheader.h
src/okteta/core/: README
src/okteta/doc/: index.cache.bz2
src/poxml/antlr/antlr/: CharScanner.hpp
src/scheck/: scheck.themerc
src/scripts/: README  cxxmetric
src/umbrello/doc/: index.cache.bz2
